[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nvmeof-client"
version = "1.0.0"
description = "Pure Python NVMe over Fabrics (NVMe-oF) TCP client library"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "LGPL-3.0-or-later"}
authors = [
    {name = "TrueNAS", email = "dev@ixsystems.com"}
]
maintainers = [
    {name = "TrueNAS", email = "dev@ixsystems.com"}
]
keywords = [
    "nvme",
    "nvme-of",
    "nvmeof",
    "storage",
    "fabric",
    "tcp",
    "rdma",
    "client"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Hardware",
    "Topic :: System :: Networking",
]

# No runtime dependencies - pure Python using only stdlib
dependencies = []

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-timeout>=2.1.0",
    "pytest-xdist>=3.0.0",  # For parallel test execution
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

# Testing dependencies (subset of dev, for CI)
test = [
    "pytest>=7.0.0",
    "pytest-timeout>=2.1.0",
    "pytest-xdist>=3.0.0",
]

# Documentation dependencies
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
]

# All optional dependencies
all = [
    "nvmeof-client[dev,test,docs]"
]

[project.urls]
Homepage = "https://github.com/truenas/truenas_pynvmeof_client"
Documentation = "https://github.com/truenas/truenas_pynvmeof_client/blob/main/README.md"
Repository = "https://github.com/truenas/truenas_pynvmeof_client"
Issues = "https://github.com/truenas/truenas_pynvmeof_client/issues"
Changelog = "https://github.com/truenas/truenas_pynvmeof_client/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]
include = ["nvmeof_client*"]
namespaces = false

[tool.setuptools.package-data]
nvmeof_client = ["py.typed"]

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--disable-warnings",
]
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (require NVMe target)",
    "manual: Manual tests requiring user interaction",
    "slow: Slow-running tests",
    "scalability: Scalability tests with many subsystems",
    "rdma: RDMA transport tests (requires RDMA hardware)",
]
# Timeout for tests (prevent hanging)
timeout = 300
# Show extra test summary info
console_output_style = "progress"

# Black code formatting
[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.pytest_cache
  | __pycache__
  | build
  | dist
)/
'''

# Ruff linting
[tool.ruff]
line-length = 120
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex (let developers decide)
]
exclude = [
    ".git",
    "__pycache__",
    ".pytest_cache",
    "build",
    "dist",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

# MyPy type checking
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Set to true when ready for strict typing
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# Coverage configuration
[tool.coverage.run]
source = ["nvmeof_client"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
